@@ -2,7 +2,7 @@ Curl and libcurl 7.17.2
 
  Public curl releases:         103
  Command line options:         125
- curl_easy_setopt() options:   149
+ curl_easy_setopt() options:   148
  Public functions in libcurl:  55
  Public web site mirrors:      42
  Known libcurl bindings:       36
@@ -15,7 +15,7 @@ This release includes the following changes:
  o --no-keep-alive was added, since starting now curl is doing connections with
    keep-alive enabled by default
  o --socks4a added (proxy type CURLPROXY_SOCKS4A for libcurl)
- o --socks5ip added (CURLOPT_SOCKS5_RESOLVE_LOCAL for libcurl)
+ o --socks5-hostname added (CURLPROXY_SOCKS5_HOSTNAME for libcurl)
 
 This release includes the following bugfixes:
 
@@ -44,7 +44,6 @@ This release includes the following bugfixes:
  o bad connection re-use check with environment variable-activated proxy use
  o --libcurl now generates a return statement as well
  o socklen_t is no longer used in the public includes
- o SOCKS5 uses now let the proxy resolve the host names by default
 
 This release includes the following known bugs:
 
